--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mynpm",
+  "name": "omycli-npm",
   "version": "0.0.1",
   "description": "私有仓库",
   "main": "",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.dev.tencent.com/Toyman/mynpm.git"
+    "url": "https://github.com/omycli/npm.git"
   },
   "author": "Mr.Ypeng",
   "license": "MIT",
